fix: network line colors and menu icon alignment

--- a/ui/src/app/applications/components/applications-list/applications-list.scss
+++ b/ui/src/app/applications/components/applications-list/applications-list.scss
@@ -196,6 +196,6 @@
         justify-content: space-evenly;
     }
 }
-i{
+i.menu_icon{
     vertical-align: middle;
 }
